[tool.poetry]
name = "codinghoning"
version = "0.1.0"
description = ""
authors = ["Cheedge <cheedgelee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
