[tool.poetry]
name = "codinghoning"
version = "0.1.0"
description = ""
authors = ["Cheedge <cheedgelee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
sortedcontainers = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.20.0"
mypy = "^0.961"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"

[tool.black]
line-length = 90
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | \.mypy_cache
  | tests/data
  | profiling
)/
'''
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true

[tool.isort]
line_length=90
multi_line_output=3
include_trailing_comma=true
old_finders=true
default_section="FIRSTPARTY"
combine_as_imports=true

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
